force-app/main/default/objects/Bus__c/fields/Current_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Status__c</fullName>
    <label>Current Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled for maintenance</fullName>
            </value>
            <value>
                <fullName>Undergoing repairs</fullName>
            </value>
            <value>
                <fullName>Ready for use</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>