force-app/main/default/objects/Bus__c/fields/Garage__c.field-meta.xml
<CustomField>
    <fullName>Garage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Garage</label>
    <referenceTo>Garage__c</referenceTo>
    <relationshipLabel>Buses</relationshipLabel>
    <relationshipName>Buses</relationshipName>
    <type>Lookup</type>
</CustomField>