force-app/main/default/objects/Bus__c/fields/Is_Air_conditioning__c.field-meta.xml
<CustomField>
    <fullName>Is_Air_conditioning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Air conditioning</label>
    <type>Checkbox</type>
</CustomField>